# atlas

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: main.rs  providers.rs  server.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: gguf.rs  lib.rs  quant.rs  safetensors.rs  tensor.rs
crates/atlas-core/tests/: phase_01_tensor_core.rs  phase_05_quant.rs  phase_11a_gguf.rs
crates/atlas-metal/: Cargo.toml
crates/atlas-metal/src/: kernels.metal  lib.rs
crates/atlas-metal/tests/: phase_00_bootstrap.rs  phase_01_tensor_core.rs
crates/atlas-model/: Cargo.toml
crates/atlas-model/src/: executor.rs  gemma4_executor.rs  kv_cache.rs  lib.rs  runtime.rs  sampling.rs
crates/atlas-model/tests/: gemma4_primitives.rs  phase_03_model.rs  phase_04_kv_cache.rs  phase_06_executors.rs  phase_10_sampling.rs  phase_12a_pre_gemma4.rs  phase_13_runtime.rs
crates/atlas-ops/: Cargo.toml
crates/atlas-ops/src/: lib.rs
crates/atlas-ops/tests/: phase_02_operators.rs
docs/: Atlas_Metal_Inference_Engine_Phase_Subplans.md  Atlas_Metal_Inference_Engine_Plan.md  atlas-gguf-conversion.md
docs/atlas-metal-phases/: README.md  [done] phase-00-metal-runtime-bootstrap.md  [done] phase-01-tensor-core.md  [done] phase-02-neural-operators.md  [done] phase-03-first-transformer-model.md  [done] phase-04-kv-cache.md  [done] phase-05-quantization.md  [done] phase-06-prefill-decode.md  [done] phase-07-interactive-cli.md  [done] phase-08-streaming-generation.md  [done] phase-08a-gpu-resident-decode-foundation.md  [done] phase-08b-gpu-resident-executor.md  [done] phase-08c-resident-decode-parity-remediation.md  [done] phase-11a-gguf-quantized-models.md  [done] phase-11b-runtime-scheduler.md  [done] phase-11c-model-providers.md  [done] phase-12-quantized-cli-acceptance.md  [done] phase-12a-pre-gemma4-e2b-text-generation.md  phase-03-first-transformer-model.md  phase-06-prefill-decode.md  phase-07-sampling.md  phase-08-local-api-server.md  phase-08-runtime-scheduler.md  phase-08a-gpu-resident-decode-performance.md  phase-08c-resident-decode-parity-remediation.md  phase-09-api-layer.md  phase-09-cli-model-lifecycle.md  phase-09-local-api-server.md  phase-09-sampling.md  phase-10-local-attention.md  phase-10-runtime-scheduler.md  phase-10-sampling.md  phase-11-api-hardening.md  phase-11-gguf-quantized-models.md  phase-11-runtime-scheduler.md  phase-11-working-memory.md  phase-11b-runtime-scheduler.md  phase-11c-model-providers.md  phase-12-api-hardening.md  phase-12-latent-graph-memory.md  (+21 more)
models/: manifest.toml
models/hf/SmolLM2-135M-Instruct/: README.md  model.safetensors
models/hf/SmolLM2-135M-Instruct/onnx/: model.onnx  model_bnb4.onnx  model_fp16.onnx  model_int8.onnx  model_q4.onnx  model_quantized.onnx
scripts/: download-models.sh  run-performance-test.sh
(+2 files in other folders)
