[workspace]
members = [
    "crates/atlas-core",
    "crates/atlas-metal",
    "crates/atlas-ops",
    "crates/atlas-model",
    "crates/atlas-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
rand = "0.8"
serde_json = "1.0"
thiserror = "2.0"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
