[package]
name = "atlas-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
atlas-core = { path = "../atlas-core" }
atlas-metal = { path = "../atlas-metal" }
atlas-model = { path = "../atlas-model" }
serde_json.workspace = true
sha2.workspace = true
ureq.workspace = true
keyring.workspace = true
rpassword.workspace = true
ratatui.workspace = true
