[package]
name = "atlas-metal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
atlas-core = { path = "../atlas-core" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-metal = { version = "0.3", features = [
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDevice",
    "MTLLibrary",
    "MTLResource",
] }
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = "0.3"
