[package]
name = "atlas-model"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
atlas-core = { path = "../atlas-core" }
atlas-metal = { path = "../atlas-metal" }
atlas-ops = { path = "../atlas-ops" }
serde_json.workspace = true
tokenizers.workspace = true
