[package]
name = "atlas-ops"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
atlas-metal = { path = "../atlas-metal" }
thiserror.workspace = true

[dev-dependencies]
atlas-core = { path = "../atlas-core" }
serde_json.workspace = true
